--- a/src/main/resources/assets/shibamod/lang/ja_jp.json
+++ b/src/main/resources/assets/shibamod/lang/ja_jp.json
@@ -1,4 +1,5 @@
 {
     "itemGroup.shiba_main_tab": "柴MOD",
-    "block.shibamod.tatami": "畳"
+    "block.shibamod.tatami": "畳",
+    "block.shibamod.gaming_tatami_beri": "ゲーミング畳（畳縁）"
 }
